# nyx

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  db.rs  error.rs  friction.rs  indexer.rs  main.rs  models.rs  output.rs  search.rs
tests/: cli_tests.rs
