[package]
name = "nyx"
version = "0.1.0"
edition = "2024"
description = "Index and search Claude Code conversation history"
license = "MIT"
authors = ["Simon"]
repository = "https://github.com/simonspoon/nyx"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
